react-helmet for dynamic meta tags

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
@@ -10,6 +11,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
+    "react-leaf-carousel": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
     "reactstrap": "^8.6.0"
